--- a/Client/tableuploadwindow.ui
+++ b/Client/tableuploadwindow.ui
@@ -100,7 +100,7 @@
      <x>320</x>
      <y>50</y>
      <width>450</width>
-     <height>550</height>
+     <height>530</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -115,10 +115,23 @@
       <x>0</x>
       <y>0</y>
       <width>450</width>
-      <height>550</height>
+      <height>530</height>
      </rect>
     </property>
    </widget>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>0</y>
+     <width>50</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Назад</string>
+   </property>
   </widget>
  </widget>
  <resources/>
