--- a/Client/tableuploadwindow.ui
+++ b/Client/tableuploadwindow.ui
@@ -109,7 +109,7 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QTableView" name="upload_files_tableView">
+   <widget class="QTableWidget" name="upload_files_tableView">
     <property name="geometry">
      <rect>
       <x>0</x>
