--- a/Client/tableuploadwindow.ui
+++ b/Client/tableuploadwindow.ui
@@ -133,6 +133,19 @@
     <string>Назад</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="save_button">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>600</y>
+     <width>130</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Сохранить</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
