--- a/Client/tableuploadwindow.ui
+++ b/Client/tableuploadwindow.ui
@@ -19,7 +19,7 @@
      <x>20</x>
      <y>50</y>
      <width>260</width>
-     <height>550</height>
+     <height>581</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -44,7 +44,7 @@
       <x>0</x>
       <y>500</y>
       <width>260</width>
-      <height>50</height>
+      <height>81</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -59,7 +59,7 @@
        <x>130</x>
        <y>0</y>
        <width>130</width>
-       <height>50</height>
+       <height>40</height>
       </rect>
      </property>
      <property name="text">
@@ -72,11 +72,24 @@
        <x>0</x>
        <y>0</y>
        <width>130</width>
-       <height>50</height>
+       <height>40</height>
       </rect>
      </property>
      <property name="text">
       <string>Добавить файлы</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="save_button">
+     <property name="geometry">
+      <rect>
+       <x>65</x>
+       <y>40</y>
+       <width>130</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Сохранить</string>
      </property>
     </widget>
    </widget>
@@ -98,9 +111,9 @@
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>50</y>
+     <y>100</y>
      <width>450</width>
-     <height>530</height>
+     <height>100</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -115,7 +128,7 @@
       <x>0</x>
       <y>0</y>
       <width>450</width>
-      <height>530</height>
+      <height>100</height>
      </rect>
     </property>
    </widget>
@@ -123,8 +136,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>0</y>
+     <x>725</x>
+     <y>15</y>
      <width>50</width>
      <height>50</height>
     </rect>
@@ -133,17 +146,30 @@
     <string>Назад</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="save_button">
+  <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>600</y>
-     <width>130</width>
+     <x>0</x>
+     <y>0</y>
+     <width>150</width>
      <height>50</height>
     </rect>
    </property>
    <property name="text">
-    <string>Сохранить</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Загрузка файлов&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QProgressBar" name="progressBar">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>210</y>
+     <width>400</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>24</number>
    </property>
   </widget>
  </widget>
